--- a/10_contour_approximation_convex_hull_and_matching_shapes.ipynb
+++ b/10_contour_approximation_convex_hull_and_matching_shapes.ipynb
@@ -36,47 +36,8 @@
    "outputs": [],
    "source": [
     "from funcs import matplotlib_imshow\n",
-    "from funcs import auto_canny"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# defining a function to find contours from images\n",
-    "# with some default preprocessing applied (Grayscale, GaussianBlur, Adaptive Gaussian Thresholding)\n",
-    "# objects represented as black and background as white needs to be inverted first before contour detection\n",
-    "\n",
-    "\n",
-    "def find_contours(\n",
-    "    img_path=None,\n",
-    "    black_obj_on_white_bg=True,\n",
-    "    mode=cv.RETR_CCOMP,\n",
-    "    method=cv.CHAIN_APPROX_SIMPLE,\n",
-    "):\n",
-    "    try:\n",
-    "        img_read = cv.imread(img_path)\n",
-    "    except:\n",
-    "        print(\"Provide a valid image path along with the image extension.\")\n",
-    "\n",
-    "    img = cv.cvtColor(img_read, cv.COLOR_BGR2GRAY)\n",
-    "    img_blurred = cv.GaussianBlur(img, (5, 5), sigmaX=0)\n",
-    "\n",
-    "    # Thresholding/ applying Canny Edge is a must to have step in finding contours.\n",
-    "    # Without this step we may not find contours at all\n",
-    "    img_thresholded = cv.adaptiveThreshold(\n",
-    "        img_blurred, 255, cv.ADAPTIVE_THRESH_GAUSSIAN_C, cv.THRESH_BINARY, 9, 2\n",
-    "    )\n",
-    "    # img_canny = auto_canny(img_blurred)\n",
-    "    if black_obj_on_white_bg:\n",
-    "        img_final = cv.bitwise_not(img_thresholded)\n",
-    "    else:\n",
-    "        img_final = img_thresholded\n",
-    "\n",
-    "    contours, hierarchy = cv.findContours(img_final, mode, method)\n",
-    "    return img_read, img_final, contours, hierarchy"
+    "from funcs import auto_canny\n",
+    "from funcs import find_contours"
    ]
   },
   {
