[sec] 02_getting_started_with_videos.ipynb: Add section - VideoWriter(): Saving a Video

--- a/02_getting_started_with_videos.ipynb
+++ b/02_getting_started_with_videos.ipynb
@@ -202,6 +202,87 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### `VideoWriter()`: Saving a Video"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To save a video we need to create a `VideoWriter()` Object. We need to pass mainly 4 arguments to the `cv.VideoWriter()` function.\n",
+    "- output filename (e.g. output.avi)\n",
+    "- specific codec type (FourCC code) e.g. **cv.VideoWriter_fourcc(*'XVID')**\n",
+    "- fps information\n",
+    "- frame size as a tuple (width, height)\n",
+    "\n",
+    "After that, we can use, `out.write(frame)` to write a video file frame by frame."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** when saving video file from webcam we should first flip the image about the y axis i.e, around the x axis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize video capture\n",
+    "cap = cv.VideoCapture(0)\n",
+    "\n",
+    "# check if camera opened\n",
+    "if not cap.isOpened():\n",
+    "    cap.open()\n",
+    "\n",
+    "# Define the codec and create VideoWriter object\n",
+    "fourcc = cv.VideoWriter_fourcc(*'XVID')\n",
+    "out = cv.VideoWriter('output.avi', fourcc, 20.0, (640,  480))\n",
+    "\n",
+    "# read frame by frame\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "\n",
+    "    if not ret:\n",
+    "        print(\"Exiting....\")\n",
+    "        break\n",
+    "\n",
+    "    # now flipping the frame about y axis\n",
+    "    frame = cv.flip(frame, 1)\n",
+    "\n",
+    "    # now showing the frame\n",
+    "    cv.imshow(\"Device 0 capture stream\", frame)\n",
+    "\n",
+    "    # now saving the frame\n",
+    "    out.write(frame)\n",
+    "\n",
+    "    # if 'q' is pressed then end capture\n",
+    "    if cv.waitKey(1) == ord(\"q\"):\n",
+    "        break\n",
+    "\n",
+    "# after everything is done, release capture, writer and destroy all windows\n",
+    "cap.release()\n",
+    "out.release()\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
