[ref] 13_fitting_different_shapes_to_a_contour.ipynb: Fitting Rectangle, Ellipse and Circle to a contour 	Add sec - Bounding Box Rectangles (Straight & Rotated)

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Grayscale images are usually 8 bits`, with **0 representing pure black and 255 representing pure white.** The values in between represents some shade of gray. *There are some functions and libraries that only takes grayscale images.*"
+    "`Grayscale images are usually 8 bits`, with `0 representing pure black and 255 representing pure white.` The values in between represents some shade of gray. *There are some functions and libraries that only takes grayscale images.*"
    ]
   },
   {
@@ -180,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The dimensions of an Image"
+    "> The dimensions of an Image"
    ]
   },
   {
@@ -260,11 +260,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usually using cv.imshow() is not the way we will go. We will use matplotlib to show images inline. This is for a number of reasons.\n",
-    "1. cv.imshow() creates a new window for each image to be shown\n",
-    "2. these instances are usually resource hungry\n",
-    "3. most of the times, when we are using notebooks instead of python scripts, we want to see the image inline.\n",
-    "4. also, with matplotlib we can plot multiple images as different axes (subplots) in the same figure. "
+    "Sometimes we will use `matplotlib.pyplot.imshow()` function instead of `cv.imshow()`. This is for a number of reasons.\n",
+    "1. cv.imshow() creates a new window for each image to be shown. Most of the times, when we are using notebooks instead of python scripts, we want to see the image inline.\n",
+    "2. also, with matplotlib we can plot multiple images as different axes (subplots) in the same figure. "
    ]
   },
   {
