--- a/04_arithmatic_operations_on_images.ipynb
+++ b/04_arithmatic_operations_on_images.ipynb
@@ -56,54 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.uint8([[250]])\n",
-    "y = np.uint8([[10]])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[255]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "opencv addition:  [[255]]\n",
+      "numpy addition: [[4]]\n"
+     ]
     }
    ],
    "source": [
+    "x = np.uint8([[250]])\n",
+    "y = np.uint8([[10]])\n",
+    "\n",
     "# opencv addition\n",
-    "cv.add(x, y)  # saturated at max_val of 255"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[4]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "print(\"opencv addition: \", cv.add(x, y))  # saturated at max_val of 255\n",
+    "\n",
     "# numpy addition\n",
-    "x + y  # modulo operation, 250+10 = 260 % 256 = 4"
+    "print(\"numpy addition:\", x + y)  # modulo operation, 250+10 = 260 % 256 = 4"
    ]
   },
   {
@@ -119,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " For the addition operation to work, both images should be of same depth and type, or the second image can just be a scalar value."
+    "**For the addition operation to work, both images should be of same depth and type, or the second image can just be a scalar value.**"
    ]
   },
   {
