[crt] OpenCV_Basics/transform.py: The transform function is used to apply random scaling, rotation and translation to an image

--- a/11_contour_features.ipynb
+++ b/11_contour_features.ipynb
@@ -83,18 +83,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Out of all the values this function returns, three of the most important values are returned with the following keys -- \n",
-    "1. 'm00': Area (for binary images) or sum of grey level (for greytone images)\n",
-    "2. 'm10': First moment of area about the x axis\n",
-    "3. 'm01': First moment of area about the y axis\n",
-    "\n",
-    "These can be used to calculate the centroid of a contour as, (`cx= 'm10'/'m00'`, `cy= 'm01'/'m00'`)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -285,6 +273,21 @@
    "metadata": {},
    "source": [
     "- ### Centroid of a Contour"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Out of all the values, the function `cv.moments(cnt)` returns, three keys can be used to calculate the centroid of a contour as, \n",
+    "\n",
+    "**(`cx= 'm10'/'m00'`, `cy= 'm01'/'m00'`)**. \n",
+    "\n",
+    "Where,\n",
+    "1. 'm00': Area (for binary images) or sum of grey level (for greytone images)\n",
+    "2. 'm10': First moment of area about the x axis\n",
+    "3. 'm01': First moment of area about the y axis"
    ]
   },
   {
