--- a/13_fitting_different_shapes_to_a_contour.ipynb
+++ b/13_fitting_different_shapes_to_a_contour.ipynb
@@ -407,6 +407,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x, y), (MA, ma), angle = cv.fitEllipse(simple_shapes_contours[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(913.2462158203125,\n",
+       " 509.03021240234375,\n",
+       " 298.7832336425781,\n",
+       " 335.07757568359375,\n",
+       " 98.0836410522461)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x , y, MA, ma, angle"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
