[ref] OpenCV_Basics/16_perspective_transformation.ipynb: Introduction to Perspective transformation 	Add section - Perspective transformation of an image 		Add subsec - Doing the same thing using the concepts learned in the Contour section

--- a/12_contour_approximation_convex_hull_and_matching_shapes.ipynb
+++ b/12_contour_approximation_convex_hull_and_matching_shapes.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
    "source": [
     "The Ramer–Douglas–Peucker algorithm, also known as the Douglas–Peucker algorithm and iterative end-point fit algorithm, is an algorithm that decimates a curve composed of line segments to a similar curve with fewer points.\n",
     "\n",
-    "It approximates a contour shape to another shape with less number of vertices so that the distance between them is less or equal to the specified precision. It is an implementation of Douglas-Peucker algorithm. "
+    "**It approximates a contour shape to another shape with less number of vertices** so that the distance between them is less or equal to the specified precision. It is an implementation of Douglas-Peucker algorithm. "
    ]
   },
   {
@@ -93,14 +93,14 @@
    "metadata": {},
    "source": [
     "<u>Function Parameters</u>\n",
-    "- curve: Input vector of a 2D point\n",
+    "- curve: Input vector of a 2D point array\n",
     "- epsilon: Parameter specifying the approximation accuracy. This is the maximum distance between the original curve and its approximation.\n",
     "- closed: If true, the approximated curve is closed (its first and last vertices are connected). Otherwise, it is not closed. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +141,7 @@
     "for cnt in star_contours:\n",
     "    accuracy = 0.01 * cv.arcLength(cnt, True)\n",
     "    approximated_contour = cv.approxPolyDP(cnt, accuracy, True)\n",
+    "    # print(len(approximated_contour), \"\\n\", approximated_contour)\n",
     "    cv.drawContours(canvas, [approximated_contour], 0, (0, 200, 100), thickness=3)"
    ]
   },
@@ -152,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f93124114d0>"
+       "<matplotlib.image.AxesImage at 0x7fb879530810>"
       ]
      },
      "execution_count": 10,
