--- a/10_finding_and_drawing_contours.ipynb
+++ b/10_finding_and_drawing_contours.ipynb
@@ -134,7 +134,6 @@
     "    mode=cv.RETR_CCOMP,\n",
     "    method=cv.CHAIN_APPROX_SIMPLE,\n",
     "):\n",
-    "    \n",
     "    try:\n",
     "        img_read = cv.imread(img_path)\n",
     "    except:\n",
@@ -343,6 +342,14 @@
    "source": [
     "# %matplotlib qt\n",
     "# draw_all_contours_one_by_one(shape_img.shape, shape_img_contours)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Use `cv.drawContours(image, [contour], -1, color, thickness=-1)` to Draw Filled Contour"
    ]
   },
   {
