[sec] OpenCV_Basics/06_noise_in_images.ipynb: Image Filtering (Add some detailed explanations) and Add section, Detect Blur in Images

--- a/06_noise_in_images.ipynb
+++ b/06_noise_in_images.ipynb
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As in one-dimensional signals, images can also be filtered with various low-pass filters (LPF), high-pass filters (HPF), etc. `LPF helps in removing noise, blurring images`, etc. `HPF filters help in finding edges` in images."
+    "The process of convolving an Image with the help of a kernel (filter) in general is called image filtering in digital image processing."
    ]
   },
   {
@@ -217,13 +217,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OpenCV provides a function `cv.filter2D(src, ddepth, kernel, anchor=(-1, -1))` to convolve a kernel with an image.\n",
-    "\n",
-    "<u>Function Arguments</u>\n",
-    "- src: image to which filter is to be applied.\n",
-    "- ddepth: depth of the output image [ -1 will give the output image depth as same as the input image]\n",
-    "- *kernel:* convolution kernel. it is nothing but a matrix representing the coefficients of the filter.\n",
-    "- anchor: anchor of the kernel that indicates the relative position of a filtered point within the kernel; default value (-1,-1) means that the anchor is at the kernel center."
+    "**See this [Youtube Video](https://www.youtube.com/watch?v=Qt80GO7Pjz8&list=PLTXuqKbKkxkTy764PhX1yil5hj-5va099&index=16) To learn the basic concept of convulution, what is a kernel, how a kernel is applied to each pixel of an image, why kernel size must be odd and to learn the answers to other similar questions.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- #### What frequency means in case of images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**For images, frequency refers to the rate of change of pixel values.** So we can say that the **sharp edges** would be **high frequency content** because the pixel values change rapidly in that region. Going by that logic, **plain areas** would be **low frequency content**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- #### High Pass and Low Pass Filters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`LPF` or Low Pass Filter is the type of frequency domain filter that attenuates the high frequency components (makes less or weaker) and preserves the low frequency components. As a result, low pass filters are used for **blurring and removing noises**."
    ]
   },
   {
@@ -231,7 +253,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Convolution ([Wikipedia](https://en.wikipedia.org/wiki/Convolution))"
+    "`HPF` or High Pass Filter is the opposite of low pass filters. It suppreses (clips) the low frequency components (below a certain threshold) and preserves the high frequency components. Thus, high pass filters are used for **sharpening and finding edges**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- #### Convolution ([Wikipedia](https://en.wikipedia.org/wiki/Convolution))"
    ]
   },
   {
@@ -271,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Kernel**"
+    "- #### Kernel"
    ]
   },
   {
@@ -279,10 +309,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Kernel:` In image processing, a kernel, convolution matrix, or mask is a small matrix used for blurring, sharpening, embossing, edge detection, and more. This is accomplished by doing a convolution between the kernel and an image. Or more simply, when each pixel in the output image is a function of the nearby pixels (including itself) in the input image, the kernel is that function.  \n",
+    "`Kernel:` In image processing, a kernel, convolution matrix, filter or mask is a small matrix used for blurring, sharpening, embossing, edge detection, and more. This is accomplished by doing a convolution between the kernel and an image. Or more simply, when each pixel in the output image is a function of the nearby pixels (including itself) in the input image, the kernel is that function.  \n",
     "\n",
-    "- See this [opencv tutorial](https://docs.opencv.org/3.4/d4/dbd/tutorial_filter_2d.html) to learn how exactly a kernel is applied to an image to bring about such different types of changes. \n",
-    "- See this [wikipedia article](https://en.wikipedia.org/wiki/Kernel_(image_processing)) to learn more about what is a kernel, common kernel matrices, application, implementation etc."
+    "-> See this [opencv tutorial](https://docs.opencv.org/3.4/d4/dbd/tutorial_filter_2d.html) to learn how exactly a kernel is applied to an image to bring about such different types of changes. \n",
+    "\n",
+    "-> See this [wikipedia article](https://en.wikipedia.org/wiki/Kernel_(image_processing)) to learn more about what is a kernel, common kernel matrices, application, implementation etc."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- #### The `cv.filter2D()` function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OpenCV provides a function `cv.filter2D(src, ddepth, kernel, anchor=(-1, -1))` to convolve a kernel with an image.\n",
+    "\n",
+    "<u>Function Arguments</u>\n",
+    "- src: image to which filter is to be applied.\n",
+    "- ddepth: depth of the output image [ -1 will give the output image depth as same as the input image]\n",
+    "- *kernel:* convolution kernel. it is nothing but a matrix representing the coefficients of the filter.\n",
+    "- anchor: anchor of the kernel that indicates the relative position of a filtered point within the kernel; default value (-1,-1) means that the anchor is at the kernel center."
    ]
   },
   {
@@ -476,6 +528,80 @@
     "fig.suptitle(\"Dog (Noisy Image) After application of different types of Filters\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Detect Blur in Images"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To Detect Blur, \n",
+    "\n",
+    "1. First, we simply **Convolve an image (should be grayscale) with the Laplacian kernel (of shape 3x3)**. The Laplacian is the 2nd derivative of an image and thus it highlights the areas of an image containing rapid intensity changes. Hence it's use in Edge Detection.\n",
+    "\n",
+    "2. To quantify blur, we then take the variance of the response output. A high variance should in theory, indicate the presence of both edge-like and non-edge like (hence the wide range of values resulting in a high variance), which is typical of a normal in-focus image. A low variance, thus might mean very little edges in the image meaning it might be blurred (as the more blur present the less edges there are)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getBlurScore(img):\n",
+    "    if len(img.shape) == 3:\n",
+    "        img = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "    return round(cv.Laplacian(img, ddepth=cv.CV_64F).var(), 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blur Score of Original Dog Image (Noisy): 5836.927\n",
+      "Blur Score of Dog Image (Normal Blur Applied): 128.513\n",
+      "Blur Score of Dog Image (Gaussian Blur Applied): 96.988\n",
+      "Blur Score of Dog Image (Median Blur Applied): 319.223\n",
+      "Blur Score of Dog Image (Bilateral Filter Blur Applied): 2763.61\n"
+     ]
+    }
+   ],
+   "source": [
+    "images = [dog_noisy_img, normal_blur, gaussian_blur, median_blur, bilateral_filter_blur]\n",
+    "image_titles = [\n",
+    "    \"Original Dog Image (Noisy)\",\n",
+    "    \"Dog Image (Normal Blur Applied)\",\n",
+    "    \"Dog Image (Gaussian Blur Applied)\",\n",
+    "    \"Dog Image (Median Blur Applied)\",\n",
+    "    \"Dog Image (Bilateral Filter Blur Applied)\",\n",
+    "]\n",
+    "for i, image in enumerate(images):\n",
+    "    print(\n",
+    "        \"Blur Score of {title}: {score}\".format(\n",
+    "            title=image_titles[i], score=getBlurScore(image)\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, If the Variance score of Laplacian convolved image is anything to judge by then Bilateral Filters works the best (At least for this particular image)."
    ]
   },
   {
