[refactor] OpenCV_Basics/**: Make style of all the section and subsection headings consistent across all the files

--- a/08_thresholding.ipynb
+++ b/08_thresholding.ipynb
@@ -166,6 +166,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### *Example of Global Thresholding and Otsu's Binarization*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -194,7 +201,9 @@
    "outputs": [],
    "source": [
     "# applying cv.THRESH_BINARY\n",
-    "thr_val, scan_img_trunc = cv.threshold(scan_img_blurred, 127, 255, cv.THRESH_BINARY)"
+    "thr_val, scan_img_thresh_binary = cv.threshold(\n",
+    "    scan_img_blurred, 127, 255, cv.THRESH_BINARY\n",
+    ")"
    ]
   },
   {
@@ -227,7 +236,7 @@
    ],
    "source": [
     "# Comparing the binary thresholded and otsu binarized image side by side\n",
-    "plt.subplot(1, 2, 1), plt.imshow(scan_img_trunc, \"gray\"), plt.title(\n",
+    "plt.subplot(1, 2, 1), plt.imshow(scan_img_thresh_binary, \"gray\"), plt.title(\n",
     "    \"Scan Img (Thresh Binary)\"\n",
     ")\n",
     "plt.subplot(1, 2, 2), plt.imshow(scan_img_otsu_binarized, \"gray\"), plt.title(\n",
@@ -257,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> `cv.adaptiveThreshold()` function"
+    "> `cv.adaptiveThreshold(src, maxValue, adaptiveMethod, thresholdType, blockSize, C)` function"
    ]
   },
   {
@@ -270,8 +279,8 @@
     "- src: Source 8-bit single-channel (grayscale) image.\n",
     "- maxValue:\tNon-zero value assigned to the pixels that exceeds the threshold value.\n",
     "- adaptiveMethod: Adaptive thresholding algorithm to use. Either `cv.ADAPTIVE_THRESH_MEAN_C` or `cv.ADAPTIVE_THRESH_GAUSSIAN_C`.\n",
-    "- thresholdType: Thresholding type that must be either *cv.THRESH_BINARY* or *cv.THRESH_BINARY_INV*.\n",
-    "- blockSize: Size of a pixel neighborhood that is used to calculate a threshold value for the pixel. Should be odd (3, 5, 7 and so on).\n",
+    "- thresholdType: Thresholding type that must be either `cv.THRESH_BINARY` or `cv.THRESH_BINARY_INV`.\n",
+    "- blockSize: Size of a pixel neighborhood that is used to calculate a threshold value for the pixel. **Should be odd** (3, 5, 7 and so on).\n",
     "- C: Constant subtracted from the mean or weighted mean. Normally, it is positive but may be zero or negative as well."
    ]
   },
@@ -342,7 +351,7 @@
     "    - generic: use custom function (see param parameter)\n",
     "    - gaussian: apply gaussian filter\n",
     "    - mean: apply arithmetic mean filter\n",
-    "    - median’: apply median rank filter\n",
+    "    - median: apply median rank filter\n",
     "- offset: Constant subtracted from weighted mean of neighborhood to calculate the local threshold value. Default offset is 0.\n",
     "\n",
     "**Returns:** Threshold image (ndarray). This array contains the threshold value calculated by the 'threshold_local()' function for each of the pixel in the input image."
@@ -353,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**All pixels in the input image higher than the corresponding pixel in the threshold image are considered foreground.**"
+    "**All elements (pixels) of the input image with value higher than the corresponding value of pixels in the threshold image are considered foreground.**"
    ]
   },
   {
