--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A computer doesn't have vision as humans do. A computer stores an image as digital data by encoding each pixel in the image as a combination of digital representation of the basic colors in the color model (using 1s and 0s). The most popular color model is `RGB`, although `OpenCV` uses `BGR` color model."
+    "A computer doesn't have vision as humans do. It stores an image as digital data by encoding each pixel in the image as a combination of digital representation of the basic colors in the color model. The most popular color model is `RGB`, although `OpenCV` uses `BGR` color model."
    ]
   },
   {
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Using `cv.imshow(winname, mat)`"
+    "##### *Using `cv.imshow(winname, mat)`*"
    ]
   },
   {
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For **`color space conversion`**, we can use `cv.cvtColor(input_image, flag)` where, `flag` determines the type of conversion (depending on the defined color space conversion code). See [Color Space Conversion Codes](https://docs.opencv.org/3.4/d8/d01/group__imgproc__color__conversions.html#ga4e0972be5de079fed4e3a10e24ef5ef0)."
+    "> For **`color space conversion`**, we can use `cv.cvtColor(input_image, flag)` where, `flag` determines the type of conversion (depending on the defined color space conversion code). See [Color Space Conversion Codes](https://docs.opencv.org/3.4/d8/d01/group__imgproc__color__conversions.html#ga4e0972be5de079fed4e3a10e24ef5ef0)."
    ]
   },
   {
